--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pymagnitude=0.1.143
-neologdn=0.5.1
-pandas=1.1.5
-mecab-python3=1.0.3
+pymagnitude==0.1.143
+neologdn==0.5.1
+pandas==1.1.5
+mecab-python3==1.0.3
